test/org/midica/testfiles/failing/inc/instruments-with-nestable-block.midica
INSTRUMENTS
	0    ACOUSTIC_GRAND_PIANO    Piano
	1    VIOLIN                  Fiddle
{
}
END